--- a/HousePrice_Final.ipynb
+++ b/HousePrice_Final.ipynb
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true
    },
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -75,32 +75,40 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Checking whether there is an H2O instance running at http://localhost:54321. connected.\n"
+      "Checking whether there is an H2O instance running at http://localhost:54321..... not found.\n",
+      "Attempting to start a local H2O server...\n",
+      "  Java Version: openjdk version \"1.8.0_102\"; OpenJDK Runtime Environment (Zulu 8.17.0.3-macosx) (build 1.8.0_102-b14); OpenJDK 64-Bit Server VM (Zulu 8.17.0.3-macosx) (build 25.102-b14, mixed mode)\n",
+      "  Starting server from /Users/yy/anaconda/lib/python3.5/site-packages/h2o/backend/bin/h2o.jar\n",
+      "  Ice root: /var/folders/_6/rl8w_p251xxct6hj32x01drc0000gn/T/tmpo_uang92\n",
+      "  JVM stdout: /var/folders/_6/rl8w_p251xxct6hj32x01drc0000gn/T/tmpo_uang92/h2o_yy_started_from_python.out\n",
+      "  JVM stderr: /var/folders/_6/rl8w_p251xxct6hj32x01drc0000gn/T/tmpo_uang92/h2o_yy_started_from_python.err\n",
+      "  Server is running at http://127.0.0.1:54321\n",
+      "Connecting to H2O server at http://127.0.0.1:54321... successful.\n"
      ]
     },
     {
      "data": {
       "text/html": [
        "<div style=\"overflow:auto\"><table style=\"width:50%\"><tr><td>H2O cluster uptime:</td>\n",
-       "<td>1 day 15 hours 24 mins</td></tr>\n",
+       "<td>03 secs</td></tr>\n",
        "<tr><td>H2O cluster version:</td>\n",
        "<td>3.12.0.1</td></tr>\n",
        "<tr><td>H2O cluster version age:</td>\n",
-       "<td>22 days </td></tr>\n",
+       "<td>23 days </td></tr>\n",
        "<tr><td>H2O cluster name:</td>\n",
-       "<td>H2O_from_python_yy_cjjqok</td></tr>\n",
+       "<td>H2O_from_python_yy_ob6s28</td></tr>\n",
        "<tr><td>H2O cluster total nodes:</td>\n",
        "<td>1</td></tr>\n",
        "<tr><td>H2O cluster free memory:</td>\n",
-       "<td>1.616 Gb</td></tr>\n",
+       "<td>1.778 Gb</td></tr>\n",
        "<tr><td>H2O cluster total cores:</td>\n",
        "<td>4</td></tr>\n",
        "<tr><td>H2O cluster allowed cores:</td>\n",
        "<td>4</td></tr>\n",
        "<tr><td>H2O cluster status:</td>\n",
-       "<td>locked, healthy</td></tr>\n",
+       "<td>accepting new members, healthy</td></tr>\n",
        "<tr><td>H2O connection url:</td>\n",
-       "<td>http://localhost:54321</td></tr>\n",
+       "<td>http://127.0.0.1:54321</td></tr>\n",
        "<tr><td>H2O connection proxy:</td>\n",
        "<td>None</td></tr>\n",
        "<tr><td>H2O internal security:</td>\n",
@@ -109,21 +117,21 @@
        "<td>3.5.2 final</td></tr></table></div>"
       ],
       "text/plain": [
-       "--------------------------  -------------------------\n",
-       "H2O cluster uptime:         1 day 15 hours 24 mins\n",
+       "--------------------------  ------------------------------\n",
+       "H2O cluster uptime:         03 secs\n",
        "H2O cluster version:        3.12.0.1\n",
-       "H2O cluster version age:    22 days\n",
-       "H2O cluster name:           H2O_from_python_yy_cjjqok\n",
+       "H2O cluster version age:    23 days\n",
+       "H2O cluster name:           H2O_from_python_yy_ob6s28\n",
        "H2O cluster total nodes:    1\n",
-       "H2O cluster free memory:    1.616 Gb\n",
+       "H2O cluster free memory:    1.778 Gb\n",
        "H2O cluster total cores:    4\n",
        "H2O cluster allowed cores:  4\n",
-       "H2O cluster status:         locked, healthy\n",
-       "H2O connection url:         http://localhost:54321\n",
+       "H2O cluster status:         accepting new members, healthy\n",
+       "H2O connection url:         http://127.0.0.1:54321\n",
        "H2O connection proxy:\n",
        "H2O internal security:      False\n",
        "Python version:             3.5.2 final\n",
-       "--------------------------  -------------------------"
+       "--------------------------  ------------------------------"
       ]
      },
      "metadata": {},
@@ -143,7 +151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
@@ -176,7 +184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 6,
    "metadata": {
     "collapsed": true
    },
@@ -189,7 +197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
@@ -224,7 +232,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false
    },
@@ -257,7 +265,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false
    },
@@ -266,9 +274,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Numeric = ['MoSold', 'BsmtFullBath', 'ScreenPorch', 'BedroomAbvGr', 'YearBuilt', 'PoolArea', 'MSSubClass', 'FullBath', 'YrSold', 'LotFrontage', 'BsmtHalfBath', 'GarageCars', '2ndFlrSF', '1stFlrSF', 'YearRemodAdd', 'WoodDeckSF', 'LotArea', 'TotalBsmtSF', 'KitchenAbvGr', 'OverallQual', 'OverallCond', '3SsnPorch', 'Fireplaces', 'TotRmsAbvGrd', 'EnclosedPorch', 'GarageYrBlt', 'LowQualFinSF', 'GrLivArea', 'OpenPorchSF', 'BsmtFinSF2', 'BsmtFinSF1', 'GarageArea', 'MasVnrArea', 'MiscVal', 'HalfBath', 'BsmtUnfSF']\n",
+      "Numeric = ['1stFlrSF', 'MoSold', 'PoolArea', 'TotRmsAbvGrd', 'FullBath', 'GarageCars', 'YearBuilt', 'LotArea', 'BsmtFullBath', 'LotFrontage', 'OverallCond', 'WoodDeckSF', 'BedroomAbvGr', 'LowQualFinSF', 'MSSubClass', '3SsnPorch', 'GrLivArea', 'KitchenAbvGr', 'BsmtFinSF1', 'ScreenPorch', 'YrSold', 'OpenPorchSF', 'MiscVal', 'EnclosedPorch', 'MasVnrArea', 'OverallQual', 'GarageYrBlt', 'HalfBath', 'GarageArea', 'BsmtHalfBath', '2ndFlrSF', 'BsmtFinSF2', 'TotalBsmtSF', 'YearRemodAdd', 'Fireplaces', 'BsmtUnfSF']\n",
       "\n",
-      "Categorical = ['SaleType', 'HeatingQC', 'HouseStyle', 'LotShape', 'Heating', 'BsmtCond', 'Functional', 'Street', 'ExterQual', 'MSZoning', 'Electrical', 'RoofMatl', 'Exterior1st', 'Foundation', 'LandContour', 'MasVnrType', 'Neighborhood', 'Exterior2nd', 'Fence', 'RoofStyle', 'GarageCond', 'Alley', 'Condition1', 'LotConfig', 'BsmtFinType2', 'BsmtExposure', 'BldgType', 'SaleCondition', 'MiscFeature', 'PavedDrive', 'Utilities', 'BsmtQual', 'BsmtFinType1', 'GarageType', 'ExterCond', 'KitchenQual', 'FireplaceQu', 'GarageQual', 'PoolQC', 'CentralAir', 'LandSlope', 'GarageFinish', 'Condition2']\n"
+      "Categorical = ['ExterQual', 'LandContour', 'Exterior1st', 'BldgType', 'LandSlope', 'GarageFinish', 'BsmtExposure', 'RoofStyle', 'BsmtFinType1', 'Alley', 'Utilities', 'Condition1', 'PavedDrive', 'Heating', 'GarageCond', 'Foundation', 'Street', 'PoolQC', 'Fence', 'SaleCondition', 'HouseStyle', 'GarageType', 'Exterior2nd', 'LotShape', 'Electrical', 'Neighborhood', 'GarageQual', 'LotConfig', 'HeatingQC', 'KitchenQual', 'Condition2', 'BsmtCond', 'ExterCond', 'BsmtQual', 'SaleType', 'MasVnrType', 'BsmtFinType2', 'CentralAir', 'MSZoning', 'MiscFeature', 'Functional', 'RoofMatl', 'FireplaceQu']\n"
      ]
     }
    ],
@@ -292,7 +300,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 10,
    "metadata": {
     "collapsed": true
    },
@@ -304,7 +312,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 11,
    "metadata": {
     "collapsed": true
    },
@@ -368,7 +376,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 12,
    "metadata": {
     "collapsed": false
    },
@@ -425,7 +433,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 13,
    "metadata": {
     "collapsed": false
    },
@@ -436,7 +444,7 @@
        "(1460, 711)"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -461,7 +469,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 14,
    "metadata": {
     "collapsed": true
    },
@@ -493,7 +501,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 15,
    "metadata": {
     "collapsed": false
    },
@@ -514,7 +522,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 16,
    "metadata": {
     "collapsed": true
    },
@@ -525,7 +533,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 17,
    "metadata": {
     "collapsed": true
    },
@@ -543,7 +551,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 18,
    "metadata": {
     "collapsed": true
    },
@@ -555,7 +563,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 19,
    "metadata": {
     "collapsed": true
    },
@@ -574,12 +582,28 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Combine into New DataFrame"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "Combine all numerical features into one big DataFrame called all_df, fill in null value and missing values, such as missing median. We then convert quality measurements from text to numbers, where a higher number means higher quality.In addition, we factorized some categorical variables and add them to numbers, this factorization seems to help with the prediction as well. \n"
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Munge takes parameter df as the function input. The train and test data will pass into the \n",
+    "function.\n",
+    "\n"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 23,
    "metadata": {
     "collapsed": false
    },
@@ -604,6 +628,10 @@
     "        all_df.loc[idx, \"LotFrontage\"] = group.median()    \n",
     "\n",
     "    all_df[\"LotArea\"] = df[\"LotArea\"]\n",
+    "    \n",
+    "#In all_df’s attribute called “MasVnrArea” stores the attribute “MasVnrArea” from df\n",
+    "#Function fillna is used to parse NAN values to zeros, just in case if any null values \n",
+    "#would stores in the all_df\n",
     "\n",
     "    all_df[\"MasVnrArea\"] = df[\"MasVnrArea\"]\n",
     "    all_df[\"MasVnrArea\"].fillna(0, inplace=True)\n",
@@ -654,9 +682,19 @@
     "    all_df[\"OverallQual\"] = df[\"OverallQual\"]\n",
     "    all_df[\"OverallCond\"] = df[\"OverallCond\"]\n",
     "\n",
-    "    #Convert quality measurements from text to numbers   \n",
+    "    #Convert quality measurements from text to numbers  \n",
+    "    # qual_dict is a dictionary which represents the value in pairs. \n",
+    "    #It is a method used for mapping text to numbers, For instance, \n",
+    "    #if an a text is “Po”, its corresponding value should be 1.\n",
+    "\n",
     "    qual_dict = {None: 0, \"Po\": 1, \"Fa\": 2, \"TA\": 3, \"Gd\": 4, \"Ex\": 5}\n",
     "    all_df[\"ExterQual\"] = df[\"ExterQual\"].map(qual_dict).astype(int)\n",
+    "    #The all_df create an attribute or filed called “ExterCond” and \n",
+    "    #stores the value from df’s “ExterCond”.\n",
+    "    #In the meanwhile, when it stores the data to all_df,\n",
+    "    #it will use the dictionary mentioned in above as the mapping method\n",
+    "    #Whenever there is a text, the mapping casts it as an integer number.\n",
+    "\n",
     "    all_df[\"ExterCond\"] = df[\"ExterCond\"].map(qual_dict).astype(int)\n",
     "    all_df[\"BsmtQual\"] = df[\"BsmtQual\"].map(qual_dict).astype(int)\n",
     "    all_df[\"BsmtCond\"] = df[\"BsmtCond\"].map(qual_dict).astype(int)\n",
@@ -904,7 +942,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 24,
    "metadata": {
     "collapsed": true
    },
@@ -930,7 +968,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 25,
    "metadata": {
     "collapsed": true
    },
@@ -951,8 +989,22 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### One-hot Encoding"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Here we defined the function onehot, which used to transform categorical features to a format that works better with classification and regressions. It used panda python function get_dummies to convert categorical variable into indicator variables."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 26,
    "metadata": {
     "collapsed": true
    },
@@ -977,7 +1029,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 27,
    "metadata": {
     "collapsed": true
    },
@@ -1063,7 +1115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 28,
    "metadata": {
     "collapsed": true
    },
@@ -1077,7 +1129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 29,
    "metadata": {
     "collapsed": true
    },
@@ -1102,7 +1154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 30,
    "metadata": {
     "collapsed": true
    },
@@ -1115,7 +1167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 31,
    "metadata": {
     "collapsed": true
    },
@@ -1128,7 +1180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 32,
    "metadata": {
     "collapsed": true
    },
@@ -1147,7 +1199,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 33,
    "metadata": {
     "collapsed": false
    },
@@ -1183,16 +1235,24 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "XGBoost is an implementation of gradient boosted decision trees designed for speed and performance. After trying several models, XGBoost has a really good performance among those models. By changing the model parameters such as colsample_bytree and max_depth, I get better scores and lower rmse. "
+    "XGBoost is an implementation of gradient boosted decision trees designed for speed and performance. After trying several models, XGBoost has a really good performance among those models. By changing the model parameters such as colsample_bytree and max_depth, I get better scores and lower rmse and I got the best result with colsample_bytree=0.4 and max_depth=8. "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 34,
    "metadata": {
     "collapsed": false
    },
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/yy/anaconda/lib/python3.5/site-packages/sklearn/cross_validation.py:44: DeprecationWarning: This module was deprecated in version 0.18 in favor of the model_selection module into which all the refactored classes and functions are moved. Also note that the interface of the new CV iterators are different from that of this module. This module will be removed in 0.20.\n",
+      "  \"This module will be removed in 0.20.\", DeprecationWarning)\n"
+     ]
+    },
     {
      "data": {
       "text/plain": [
@@ -1203,7 +1263,7 @@
        "       scale_pos_weight=1, seed=42, silent=1, subsample=0.2)"
       ]
      },
-     "execution_count": 56,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1229,7 +1289,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 35,
    "metadata": {
     "collapsed": false
    },
@@ -1251,7 +1311,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 36,
    "metadata": {
     "collapsed": true
    },
@@ -1263,7 +1323,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 37,
    "metadata": {
     "collapsed": false
    },
@@ -1274,7 +1334,7 @@
        "(1456, 403)"
       ]
      },
-     "execution_count": 59,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1299,7 +1359,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 38,
    "metadata": {
     "collapsed": false
    },
@@ -1329,7 +1389,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 39,
    "metadata": {
     "collapsed": true
    },
@@ -1355,7 +1415,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 40,
    "metadata": {
     "collapsed": true
    },
@@ -1372,7 +1432,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 41,
    "metadata": {
     "collapsed": false
    },
@@ -1381,13 +1441,20 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Are you sure you want to shutdown the H2O instance running at http://localhost:54321 (Y/N)? y\n",
-      "H2O session _sid_8194 closed.\n"
+      "Are you sure you want to shutdown the H2O instance running at http://127.0.0.1:54321 (Y/N)? y\n",
+      "H2O session _sid_bc91 closed.\n"
      ]
     }
    ],
    "source": [
     "h2o.cluster().shutdown(prompt=True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "With the notebook above, I was able to achieve a top 10% rank in the Kaggle House Prices -Advanced Regression competition. We really enjoyed this summer session of machine learing and doing our first Kaggle competition. Thanks!"
    ]
   },
   {
@@ -1415,6 +1482,7 @@
   }
  ],
  "metadata": {
+  "anaconda-cloud": {},
   "kernelspec": {
    "display_name": "Python [default]",
    "language": "python",
